objects/Account_Profile__c.object
<CustomObject>
    <description>As of 7/31/2019 this should only be available for Mack Intenal Users and as a relatedl list under Accounts</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Profiles</relationshipLabel>
        <relationshipName>Account_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Account__r.BillingStreet + BR() + 
Account__r.BillingCity + &quot;, &quot;+ 
Account__r.BillingState +&quot; &quot; + 
Account__r.BillingPostalCode + BR() + 
Account__r.BillingCountry</formula>
        <label>Primary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_of_Company__c</fullName>
        <label>Age of Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agriculture_farm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agriculture/Farm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_miles_per_year__c</fullName>
        <label>Annual Miles Per Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Armored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Armored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autocar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autocar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autorack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autorack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beverage_processing_distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beverage Processing &amp; Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Affinity__c</fullName>
        <label>Brand Affinity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bus_transportation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bus Transportation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Ownership__c</fullName>
        <label>Business Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>For-Hire</fullName>
                </value>
                <value>
                    <fullName>Owner Operator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CST_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CST&lt;10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CST_GT_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CST&gt;10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chassis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chassis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Construction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Construction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <label>Contact Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_of_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost of Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Crane_carrier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Crane Carrier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Business_Needs__c</fullName>
        <label>Current Business Needs</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_average_fuel_efficiency__c</fullName>
        <label>Current Average Fuel Efficiency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_RFM_NAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM/RFM/NAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decision_making_roles__c</fullName>
        <label>Decision Making Roles</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Details__c</fullName>
        <label>If so, Provide Demo Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desk_Phone_Number__c</fullName>
        <label>Desk Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Direct_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driver_Retention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Driver Retention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dump__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dump</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Durability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Durability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_vehicles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency Vehicles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engine_s__c</fullName>
        <label>Engine(s)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <label>Executive Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>F2F__c</fullName>
        <defaultValue>false</defaultValue>
        <label>F2F</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FMV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flatbed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flatbed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fleet_Brands__c</fullName>
        <label>Fleet Brands</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Preferred_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fleet Preferred Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Food_processing_distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Food Processing &amp; Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forestry_lumber_products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forestry/Lumber Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freightliner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freightliner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fuel_Efficiency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fuel Efficiency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Service_Lease_DT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Service Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Service_Leasing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Service Leasing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Contact_Notes__c</fullName>
        <label>General Contact Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_freight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General Freight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_freight_hazardous_materials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General Freight/Hazardous Materials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_notes__c</fullName>
        <label>General Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Government_miscellaneous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Government/Miscellaneous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hazardous_materials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hazardous Materials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HeavySpec__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Heavy Spec</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hopper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hopper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HorseVan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Horse Van</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_Customer_makes_Purchase_Decissions__c</fullName>
        <label>Purchase Decision Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Individual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Individual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kenworth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kenworth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCOE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LCOE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landscaping_horticulture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Landscaping/Horticulture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Visit_Date__c</fullName>
        <label>Last Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_finance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease/Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_manufacturer_sponsored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease/Manufacturer Sponsored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_rental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease/Rental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Livestock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Livestock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lowboy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lowboy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MFS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manufacturing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mining_quarrying__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mining/Quarrying</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Miscellaneous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Miscellaneous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_s__c</fullName>
        <label>Model(s)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moving_and_storage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Moving and Storage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Score__c</fullName>
        <label>NPS Survey Score</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_of_Employees__c</fullName>
        <label># of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tractors_Trucks__c</fullName>
        <label>Number of Tractors/Trucks</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Service_Information__c</fullName>
        <label>Open Service Information</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opentop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open Top</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Brand_Aff__c</fullName>
        <label>Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Otype__c</fullName>
        <label>Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Pref_Con_Method__c</fullName>
        <label>Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_TT_Used__c</fullName>
        <label>Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Values_Imp__c</fullName>
        <label>Other</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owned_Leasing_information__c</fullName>
        <label>Owned/Leasing Information</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parts Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Party_ID__c</fullName>
        <formula>Account__r.Party_ID__c</formula>
        <label>Party ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peterbilt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Peterbilt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Petroleum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Petroleum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Petroleum_hazardous_material__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Petroleum/Hazardous Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pneumatic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pneumatic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Growth_Opportunity__c</fullName>
        <label>Potential Growth Opportunity</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_issues_with_Mack_Trucks__c</fullName>
        <label>Potential Issues With Mack Trucks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Print__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this for Hiding Field History in Printable View. Uncheck it Back to see Field History tracking.</description>
        <inlineHelpText>Check this for Hiding Field History in Printable View. Uncheck it Back to see Field History tracking.</inlineHelpText>
        <label>Printable View Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Fit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Fit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Projected_Purchase_s__c</fullName>
        <label>Projected Purchase(s)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Cycle__c</fullName>
        <label>Purchase Cycle</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Dealer__c</fullName>
        <label>Who Is This Customer&apos;s Selling Dealer?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_History_Date__c</fullName>
        <label>Purchase Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qualified_parts_purchased_by_year__c</fullName>
        <label>Qualified Parts Purchased By Year</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RVP_Formula__c</fullName>
        <formula>RVP__c</formula>
        <label>RVP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RVP__c</fullName>
        <label>RVP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Purchases_s__c</fullName>
        <label>Recent Purchases(s)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reefer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reefer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>text(Account__r.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resale_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resale Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Road_highway_maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Road/Highway Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roll_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roll Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safety__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sanitation_hazardous_material__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sanitation/Hazardous Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sanitation_refuse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sanitation/Refuse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Dealer__c</fullName>
        <label>Who Is This Customer&apos;s Service Dealer?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialized_heavy_hauling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specialized/Heavy Hauling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stepdeck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step Deck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telematics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Telematics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cost_of_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total Cost of Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Fleet_Size__c</fullName>
        <label>Total Fleet Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Touch_Points_Open_Discussion_Items__c</fullName>
        <label>Touch Points / Open Discussion Items</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tow_Truck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tow Truck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trade_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trade_Shows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade Shows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trades__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trades</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transmission_s__c</fullName>
        <label>Transmission(s)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unclassified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unclassified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uptime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uptime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Utility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utility_hazardous_material__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Utility/Hazardous Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utility_services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Utility services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Van__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Van</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_transporter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehicle Transporter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vocation__c</fullName>
        <label>Vocation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volvo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volvo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Western_star__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Western Star</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wholesale_retail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wholesale/Retail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>challenges_to_be_aware_of_with_this_Cust__c</fullName>
        <label>Challenges To Be Aware Of</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>e_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Party_ID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Profiles</pluralLabel>
    <recordTypes>
        <fullName>Normal_Layout</fullName>
        <active>true</active>
        <label>Normal Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Print_Layout</fullName>
        <active>true</active>
        <label>Print Layout</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>